# mkmnfst

./: .gitignore  DEVELOPING.md  LICENSE  Makefile.am  NEWS  README.md  config.h.in  configure.ac
man/: Makefile.am
man/man1/: mkmnfst.1
src/: Makefile.am  compat.c  compat.h  main.c  mem_str.c  mem_str.h  replace_str.c  replace_str.h  sign.c  sign.h  text.c  text.h  upload.c  upload.h
